[tool.poetry]
name = "beatmap_helper"
version = "0.1.0"
description = ""
authors = ["Kyle Oliver <oliverke@mail.uc.edu>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
PyAudio = "^0.2.12"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
